# mail2ical

./: README.md  config.example.yaml  email_server.py  mail2ical.py  pyproject.toml  test_client.py
docs/: design
mail2ical/: parser.py
