[tool.poetry]
name = "mail2ical"
version = "0.1.0"
description = ""
authors = ["Adam Kelly <adam@cthulahoops.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosmtpd = "^1.4.6"
icalendar = "^5.0.13"
anthropic = "^0.34.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
